# aksync

./: .editorconfig  Cargo.toml  REUSE.toml  build.rs  cliff.toml  deny.toml  flake.nix
.github/workflows/: ci.yml
nix/: module.nix
src/: aktool.rs  komapedia.rs  main.rs  model.rs
