# © 2025 Maximilian Marx
# SPDX-FileContributor: Maximilian Marx
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "aksync"
description = "import AK proposals from the aktool into KoMapedia"
homepage = "https://github.com/die-koma/aksync"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
authors = ["Maximilian Marx <mmarx@wh2.tu-dresden.de>"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[build-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
