# © 2025 Maximilian Marx
# SPDX-FileContributor: Maximilian Marx
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "aksync"
description = "import AK proposals from the aktool into KoMapedia"
homepage = "https://github.com/die-koma/aksync"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
authors = ["Maximilian Marx <mmarx@wh2.tu-dresden.de>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test-log = "0.2.17"
tokio = "1.45.1"

[build-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
